<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Name of the App -->
    <string name="app_name">CoroutinesRoom</string>

    <!-- ========================================== -->
    <!-- STRINGS USED IN LOGIN AND SIGN-UP FRAGMENT -->
    <!-- ========================================== -->
    <string name="hint_login_sign_up_username">Username*</string>
    <string name="hint_login_sign_up_password">Password*</string>

    <!-- ============================== -->
    <!-- STRINGS USED IN LOGIN FRAGMENT -->
    <!-- ============================== -->
    <string name="title_login_toolbar">Login</string>
    <string name="label_button_login">Login</string>
    <string name="label_button_login_sign_up">Go To SignUp</string>
    <string name="message_login_empty_fields">Please fill all fields</string>
    <string name="error_login_username_invalid">User not found</string>
    <string name="error_login_password_invalid">Incorrect Password</string>
    <string name="message_login_done">Login successful</string>

    <!-- ============================= -->
    <!-- STRINGS USED IN MAIN FRAGMENT -->
    <!-- ============================= -->
    <string name="title_main_toolbar">Main</string>
    <string name="title_main_header">You are now signed in as</string>
    <string name="text_main_username">username</string>
    <string name="label_button_main_log_out">Log Out</string>
    <string name="label_button_main_delete_user">Delete User</string>
    <string name="title_dialog_main_confirm_delete_user">Delete User?</string>
    <string name="label_dialog_main_confirm_delete_user_yes">Yes</string>
    <string name="label_dialog_main_confirm_delete_user_cancel">Cancel</string>
    <string name="message_main_sign_out_done">Signed out</string>
    <string name="message_main_user_delete_done">User deleted</string>
    <string name="error_main_user_delete_failure">Current User could not be deleted</string>
    <string name="text_main_info_placeholder">
        \"<xliff:g example="lorem ipsum" id="info_text">%1$s</xliff:g>\"
    </string>

    <!-- ================================ -->
    <!-- STRINGS USED IN SIGN-UP FRAGMENT -->
    <!-- ================================ -->
    <string name="title_sign_up_toolbar">Sign Up</string>
    <string name="hint_sign_up_other_info">Other info*</string>
    <string name="label_button_sign_up">Sign Up</string>
    <string name="label_button_sign_up_login">Go To Login</string>
    <string name="message_sign_up_empty_fields">Please fill all fields</string>
    <string name="message_sign_up_done">SignUp completed</string>
    <string name="error_sign_up_username_exists">Username already exists</string>

</resources>
