<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/std_large_padding"
    android:paddingBottom="@dimen/std_large_padding"
    android:background="@color/bkg_red"
    tools:context=".view.MainFragment">

    <TextView
        android:id="@+id/text_main_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_margin"
        android:text="@string/title_main_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_main_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_large_margin"
        android:text="@string/text_main_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_main_header" />

    <TextView
        android:id="@+id/text_main_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="italic"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_main_username"
        tools:text="@string/text_main_info_placeholder" />

    <Button
        android:id="@+id/btn_main_log_out"
        style="@style/ButtonStyle"
        android:layout_width="@dimen/std_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_large_margin"
        android:text="@string/label_button_main_log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_main_info" />

    <Button
        android:id="@+id/btn_main_delete_user"
        style="@style/ButtonStyle"
        android:layout_width="@dimen/std_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_margin"
        android:text="@string/label_button_main_delete_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_log_out" />

</androidx.constraintlayout.widget.ConstraintLayout>