<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkg_blue"
    tools:context=".view.LoginFragment">

    <EditText
        android:id="@+id/edit_login_username"
        android:layout_width="@dimen/std_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_large_margin"
        android:ems="10"
        android:hint="@string/hint_login_sign_up_username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="@dimen/std_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_margin"
        android:ems="10"
        android:hint="@string/hint_login_sign_up_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_login_username" />

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonStyle"
        android:layout_width="@dimen/std_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_large_margin"
        android:text="@string/label_button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_login_password" />

    <Button
        android:id="@+id/btn_login_sign_up"
        style="@style/ButtonStyle"
        android:layout_width="@dimen/std_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_margin"
        android:text="@string/label_button_login_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>